flex/05-flex-modal/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

html, body {
  height: 100%;
}

body {
  font-family: Roboto, sans-serif;
  margin: 0;
  background: #aaa;
  color: #333;
  /* I'll give you this one for free lol */
  display: flex;
  align-items: center;
  justify-content: center;
}

.modal {
  background: white;
  width: 480px;
  border-radius: 10px;
  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
  padding:10px;
  display:flex;
  flex-direction:row;
  justify-content:space-evenly;
  align-items:flex-start;
  padding:16px;
}

.icon {
  color: royalblue;
  font-size: 26px;
  font-weight: 700;
  background: lavender;
  width: 42px;
  height: 42px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.header{
  text-decoration:bold;
  font-size: 28px;
  padding:8px;
  text-wrap: nowrap;
}

.close-button {
  background: #eee;
  border-radius: 50%;
  color: #888;
  font-weight: 400;
  font-size: 16px;
  height: 24px;
  width: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px solid #eee;
  padding: 0;
}

button {
  cursor: pointer;
  padding: 8px 16px;
  border-radius: 8px;
}

button.continue {
  background: royalblue;
  border: 1px solid royalblue;
  color: white;
  margin-right:8px;
}

button.cancel {
  background: white;
  border: 1px solid #ddd;
  color: royalblue;
}
.Ibox{
  margin:16px;
  display:flex;
  flex:1;
  flex-direction:row;
  justify-content:flex-start;

}

.Cbox{
  margin:16px;
  display:flex;
  flex:1;
  justify-content:flex-end;
  align-items:flex-start;

}

.CacoBox{
  display:flex;
  flex:1;
  flex-direction:column;
  justify-content:flex-start;
  padding:8px;margin-top:8px;
}

